--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,15 @@
     <title>Pets-R-Us</title>
   </head>
   <body>
-    <h1>Pets-R-Us</h1>
+    <div class="topnav1">
+      <a href="#about" class="petTital">Pets-R-Us</a>
+
+      <a href="#news" class="split">Log In</a>
+      <a href="#contact" class="split">Sign Up</a>
+      <a class="active split" href="#home" class="">Home</a>
+    </div>
+
+    <!-- ////////////////////// -->
     <div class="bg-img">
       <div class="containerbar">
         <div class="topnav">
@@ -101,21 +109,121 @@
         </div>
       </div>
     </div>
+    <hr />
+    <section class="location">
+      <ul class="grid">
+        <li>
+          <div id="card-container">
+            <div id="card">
+              <div class="card-title">LOCATION HOURS</div>
+              <div class="card-content">
+                <ul>
+                  <li class="opentime">Mon 6:30 AM - 7:00 PM</li>
+                  <li class="opentime">Tues 6:30 AM - 7:00 PM</li>
+                  <li class="opentime">Wed 6:30 AM - 7:00 PM</li>
+                  <li class="opentime">Thurs 6:30 AM - 7:00 PM</li>
+                  <li class="opentime">Fri 6:30 AM - 7:00 PM</li>
+                  <li class="opentime">Sat 10:00 AM - 5:00 PM</li>
+                  <li class="opentime sunli">Sun 10:00 AM - 5:00 PM</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </li>
 
-    <div id="card-container">
-      <div id="card"></div>
-      <div class="card-title">LOCATION HOURS</div>
-      <div class="card-content">
-        <ul>
-          <li>Mon 6:30 AM - 7:00 PM</li>
-          <li>Tues 6:30 AM - 7:00 PM</li>
-          <li>Wed 6:30 AM - 7:00 PM</li>
-          <li>Thurs 6:30 AM - 7:00 PM</li>
-          <li>Fri 6:30 AM - 7:00 PM</li>
-          <li>Sat 10:00 AM - 5:00 PM</li>
-          <li>Sun 10:00 AM - 5:00 PM</li>
-        </ul>
+        <li class="left-align">
+          <p class="locationtbellevue">LOCATION: Bellevue</p>
+
+          <p class="address">1000 Galvin Road S; Bellevue, NE 68005</p>
+
+          <p class="contact">Contact Us</p>
+          <p class="contactp">
+            Lorem ipsum dolor sit amet purus sagittis id justo.
+          </p>
+
+          <form action="" class="">
+            <label for="Email" id="label">Email</label><br />
+            <input type="text" id="email" value="" />
+            <input type="submit" value="Submit" />
+          </form>
+        </li>
+      </ul>
+      <hr />
+
+      <div>
+        <div class="card weekly-dog">
+          <div class="card-title">Dog of the Week</div>
+          <div class="card-content">
+            <p><strong>Name:</strong> Chente</p>
+            <p><strong>Age:</strong> 8 weeks</p>
+            <p><strong>Favorite activity:</strong> Chasing the family cat</p>
+            <p><strong>Friends:</strong> Ony and Lexi</p>
+            <p><strong>Most lovable quality:</strong> Loves to chew on toys.</p>
+          </div>
+        </div>
       </div>
-    </div>
+    </section>
+
+    <!-- <div class="row rowhours">
+      <div class="column">
+        <div id="card-container">
+          <div id="card">
+            <div class="card-title">LOCATION HOURS</div>
+            <div class="card-content">
+              <ul>
+                <li class="opentime">Mon 6:30 AM - 7:00 PM</li>
+                <li class="opentime">Tues 6:30 AM - 7:00 PM</li>
+                <li class="opentime">Wed 6:30 AM - 7:00 PM</li>
+                <li class="opentime">Thurs 6:30 AM - 7:00 PM</li>
+                <li class="opentime">Fri 6:30 AM - 7:00 PM</li>
+                <li class="opentime">Sat 10:00 AM - 5:00 PM</li>
+                <li class="opentime sunli">Sun 10:00 AM - 5:00 PM</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="column">
+        <p class="location">LOCATION</p>
+        <h3 class="location1">Bellevue</h3>
+        <p class="location2">1000 Galvin Road S; Bellevue, NE 68005</p>
+
+        <p class="location">Contact Us</p>
+        <p class="locationp">
+          Lorem ipsum dolor sit amet purus sagittis id justo. Fringilla bibendum
+          at enim lacus est venenatis arcu dignissim erat.
+        </p>
+
+        <form action="" class="locationp">
+          <label for="Email" id="label">Email</label><br />
+          <input type="text" id="email" value="" />
+          <input type="submit" value="Submit" />
+        </form>
+      </div>
+    </div> -->
+    <hr />
+    <section class="testimonials">
+      <h1 style="text-align: center">Customer Testimonials</h1>
+
+      <p class="quote">
+        Lorem ipsum dolor sit amet quis dui ridiculus. Semper vulputate platea
+        auctor quisque aliquam ipsum leo hac turpis per. Sollicitudin ante amet
+        venenatis ridiculus consectetur finibus aenean viverra semper elit.
+      </p>
+      <p class="author">- John Wong</p>
+      <p class="quote">
+        Lorem ipsum dolor sit amet quis dui ridiculus. Semper vulputate platea
+        auctor quisque aliquam ipsum leo hac turpis per. Sollicitudin ante amet
+        venenatis ridiculus consectetur finibus aenean viverra semper elit.
+      </p>
+      <p class="author">- John Wong</p>
+      <p class="quote">
+        Lorem ipsum dolor sit amet quis dui ridiculus. Semper vulputate platea
+        auctor quisque aliquam ipsum leo hac turpis per. Sollicitudin ante amet
+        venenatis ridiculus consectetur finibus aenean viverra semper elit.
+      </p>
+      <p class="author">- John Wong</p>
+    </section>
   </body>
 </html>
