--- a/views/index.html
+++ b/views/index.html
@@ -20,10 +20,10 @@
     <div class="bg-img">
       <div class="containerbar">
         <div class="topnav">
-          <button class="navbtn"><a href="#home">Home</a></button>
-          <button class="navbtn"><a href="#news">Boarding</a></button>
-          <button class="navbtn"><a href="#contact">Grooming</a></button>
-          <button class="navbtn"><a href="#about">Training</a></button>
+          <button class="navbtn"><a href="">Home</a></button>
+          <button class="navbtn"><a href="">Boarding</a></button>
+          <button class="navbtn"><a href="">Grooming</a></button>
+          <button class="navbtn"><a href="">Training</a></button>
         </div>
       </div>
     </div>
@@ -50,15 +50,13 @@
     <div class="row">
       <div class="column">
         <div class="card">
-          <h2>Boarding</h2>
+          <h2 class="serviceTital">Boarding</h2>
           <img
             src="../public/images/background-img.jpg"
             alt="Jane"
             style="width: 100%"
           />
           <div class="container">
-            <!-- <h2>Jane Doe</h2> -->
-            <!-- <p class="title">CEO & Founder</p> -->
             <p>Short describes service.</p>
             <p>
               Lorem ipsum dolor sit amet quis dui ridiculus. Semper vulputate
@@ -71,14 +69,13 @@
 
       <div class="column">
         <div class="card">
-          <h2>Grooming</h2>
+          <h2 class="serviceTital">Grooming</h2>
           <img
             src="../public/images/background-img.jpg"
             alt="Mike"
             style="width: 100%"
           />
           <div class="container">
-            <!-- <h2>Mike Ross</h2> -->
             <p>Short describes service.</p>
             <p>
               Lorem ipsum dolor sit amet quis dui ridiculus. Semper vulputate
@@ -91,14 +88,13 @@
 
       <div class="column">
         <div class="card">
-          <h2>Training</h2>
+          <h2 class="serviceTital">Training</h2>
           <img
             src="../public/images/background-img.jpg"
             alt="John"
             style="width: 100%"
           />
           <div class="container">
-            <!-- <h2>John Doe</h2> -->
             <p>Short describes service.</p>
             <p>
               Lorem ipsum dolor sit amet quis dui ridiculus. Semper vulputate
@@ -154,54 +150,20 @@
         <div class="card weekly-dog">
           <div class="card-title">Dog of the Week</div>
           <div class="card-content">
-            <p><strong>Name:</strong> Chente</p>
-            <p><strong>Age:</strong> 8 weeks</p>
-            <p><strong>Favorite activity:</strong> Chasing the family cat</p>
-            <p><strong>Friends:</strong> Ony and Lexi</p>
-            <p><strong>Most lovable quality:</strong> Loves to chew on toys.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- <div class="row rowhours">
-      <div class="column">
-        <div id="card-container">
-          <div id="card">
-            <div class="card-title">LOCATION HOURS</div>
-            <div class="card-content">
-              <ul>
-                <li class="opentime">Mon 6:30 AM - 7:00 PM</li>
-                <li class="opentime">Tues 6:30 AM - 7:00 PM</li>
-                <li class="opentime">Wed 6:30 AM - 7:00 PM</li>
-                <li class="opentime">Thurs 6:30 AM - 7:00 PM</li>
-                <li class="opentime">Fri 6:30 AM - 7:00 PM</li>
-                <li class="opentime">Sat 10:00 AM - 5:00 PM</li>
-                <li class="opentime sunli">Sun 10:00 AM - 5:00 PM</li>
-              </ul>
+            <img src="../public/images/test-dog.jpg" class="testDog" alt="" />
+            <div class="dogInfo">
+              <p><strong>Name:</strong> Chente</p>
+              <p><strong>Age:</strong> 8 weeks</p>
+              <p><strong>Favorite activity:</strong> Chasing the family cat</p>
+              <p><strong>Friends:</strong> Ony and Lexi</p>
+              <p>
+                <strong>Most lovable quality:</strong> Loves to chew on toys.
+              </p>
             </div>
           </div>
         </div>
       </div>
-
-      <div class="column">
-        <p class="location">LOCATION</p>
-        <h3 class="location1">Bellevue</h3>
-        <p class="location2">1000 Galvin Road S; Bellevue, NE 68005</p>
-
-        <p class="location">Contact Us</p>
-        <p class="locationp">
-          Lorem ipsum dolor sit amet purus sagittis id justo. Fringilla bibendum
-          at enim lacus est venenatis arcu dignissim erat.
-        </p>
-
-        <form action="" class="locationp">
-          <label for="Email" id="label">Email</label><br />
-          <input type="text" id="email" value="" />
-          <input type="submit" value="Submit" />
-        </form>
-      </div>
-    </div> -->
+    </section>
     <hr />
     <section class="testimonials">
       <h1 style="text-align: center">Customer Testimonials</h1>
