--- a/views/index.html
+++ b/views/index.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../public/styles/style.css" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Pets-R-Us</title>
   </head>
   <body>
     <div class="topnav1">
-      <a href="#about" class="petTital">Pets-R-Us</a>
+      <a href="./index.html" class="petTital">Pets-R-Us</a>
 
-      <a href="#news" class="split">Log In</a>
-      <a href="#contact" class="split">Sign Up</a>
-      <a class="active split" href="#home" class="">Home</a>
+      <a href="#" class="split">Log In</a>
+      <a href="#" class="split">Sign Up</a>
+      <a class="active split" href="./index.html" class="">Home</a>
     </div>
 
     <!-- ////////////////////// -->
     <div class="bg-img">
       <div class="containerbar">
         <div class="topnav">
-          <button class="navbtn"><a href="">Home</a></button>
+          <button class="navbtn"><a href="/">Home</a></button>
           <button class="navbtn"><a href="">Boarding</a></button>
-          <button class="navbtn"><a href="">Grooming</a></button>
+          <button class="navbtn"><a href="grooming">Grooming</a></button>
           <button class="navbtn"><a href="">Training</a></button>
         </div>
       </div>
@@ -52,7 +52,7 @@
         <div class="card">
           <h2 class="serviceTital">Boarding</h2>
           <img
-            src="../public/images/background-img.jpg"
+            src="/images/background-img.jpg"
             alt="Jane"
             style="width: 100%"
           />
@@ -71,7 +71,7 @@
         <div class="card">
           <h2 class="serviceTital">Grooming</h2>
           <img
-            src="../public/images/background-img.jpg"
+            src="/images/background-img.jpg"
             alt="Mike"
             style="width: 100%"
           />
@@ -90,7 +90,7 @@
         <div class="card">
           <h2 class="serviceTital">Training</h2>
           <img
-            src="../public/images/background-img.jpg"
+            src="/images/background-img.jpg"
             alt="John"
             style="width: 100%"
           />
@@ -150,7 +150,7 @@
         <div class="card weekly-dog">
           <div class="card-title">Dog of the Week</div>
           <div class="card-content">
-            <img src="../public/images/test-dog.jpg" class="testDog" alt="" />
+            <img src="/images/test-dog.jpg" class="testDog" alt="" />
             <div class="dogInfo">
               <p><strong>Name:</strong> Chente</p>
               <p><strong>Age:</strong> 8 weeks</p>
