--- a/views/grooming.html
+++ b/views/grooming.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../public/styles/style.css" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Pets-R-Us</title>
   </head>
   <body>
@@ -20,9 +20,9 @@
     <div class="bg-img">
       <div class="containerbar">
         <div class="topnav">
-          <button class="navbtn"><a href="">Home</a></button>
+          <button class="navbtn"><a href="./">Home</a></button>
           <button class="navbtn"><a href="">Boarding</a></button>
-          <button class="navbtn"><a href="">Grooming</a></button>
+          <button class="navbtn"><a href="./grooming.html">Grooming</a></button>
           <button class="navbtn"><a href="">Training</a></button>
         </div>
       </div>
@@ -48,114 +48,12 @@
         <button class="groomButton">Schedule a service</button>
       </p>
     </div>
-
-    <!-- <h1 style="text-align: center">Pet Services</h1>
-    <div class="row">
-      <div class="column">
-        <div class="card">
-          <h2 class="serviceTital">Boarding</h2>
-          <img
-            src="../public/images/background-img.jpg"
-            alt="Jane"
-            style="width: 100%"
-          />
-          <div class="container">
-            <p>Short describes service.</p>
-            <p>
-              Lorem ipsum dolor sit amet quis dui ridiculus. Semper vulputate
-              platea auctor quisque aliquam ipsum leo hac turpis per.
-            </p>
-            <p>
-              <button class="button">Schedule a service</button>
-            </p>
-          </div>
-        </div>
-      </div> -->
-
-      <!-- <div class="column">
-        <div class="card">
-          <h2 class="serviceTital">Grooming</h2>
-          <img
-            src="../public/images/background-img.jpg"
-            alt="Mike"
-            style="width: 100%"
-          />
-          <div class="container">
-            <p>Short describes service.</p>
-            <p>
-              Lorem ipsum dolor sit amet quis dui ridiculus. Semper vulputate
-              platea auctor quisque aliquam ipsum leo hac turpis per.
-            </p>
-            <p><button class="button">Schedule a service</button></p>
-          </div>
-        </div>
-      </div>
-
-      <div class="column">
-        <div class="card">
-          <h2 class="serviceTital">Training</h2>
-          <img
-            src="../public/images/background-img.jpg"
-            alt="John"
-            style="width: 100%"
-          />
-          <div class="container">
-            <p>Short describes service.</p>
-            <p>
-              Lorem ipsum dolor sit amet quis dui ridiculus. Semper vulputate
-              platea auctor quisque aliquam ipsum leo hac turpis per.
-            </p>
-            <p><button class="button">Schedule a service</button></p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <hr />
-    <section class="location">
-      <ul class="grid">
-        <li>
-          <div id="card-container">
-            <div id="card">
-              <div class="card-title">LOCATION HOURS</div>
-              <div class="card-content">
-                <ul>
-                  <li class="opentime">Mon 6:30 AM - 7:00 PM</li>
-                  <li class="opentime">Tues 6:30 AM - 7:00 PM</li>
-                  <li class="opentime">Wed 6:30 AM - 7:00 PM</li>
-                  <li class="opentime">Thurs 6:30 AM - 7:00 PM</li>
-                  <li class="opentime">Fri 6:30 AM - 7:00 PM</li>
-                  <li class="opentime">Sat 10:00 AM - 5:00 PM</li>
-                  <li class="opentime sunli">Sun 10:00 AM - 5:00 PM</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </li>
-
-        <li class="left-align">
-          <p class="locationtbellevue">LOCATION: Bellevue</p>
-
-          <p class="address">1000 Galvin Road S; Bellevue, NE 68005</p>
-
-          <p class="contact">Contact Us</p>
-          <p class="contactp">
-            Lorem ipsum dolor sit amet purus sagittis id justo.
-          </p>
-
-          <form action="" class="">
-            <label for="Email" id="label">Email</label><br />
-            <input type="text" id="email" value="" />
-            <input type="submit" value="Submit" />
-          </form>
-        </li>
-      </ul> -->
       <hr />
-
       <div>
         <div class="card weekly-dog">
           <div class="card-title">Pricing</div>
           <div class="card-content">
-            <img src="../public/images/test-dog.jpg" class="testDog" alt="" />
+            <img src="./images/test-dog.jpg" class="testDog" alt="" />
             <div class="groomPI">
               <p><strong>SPA Packages:</strong> $25-$65</p>
               <p><strong>Nail Trim:</strong> $10</p>
