--- a/views/grooming.html
+++ b/views/grooming.html
@@ -1,3 +1,8 @@
+<!-- Title: grooming.html
+  Author: April Yang
+  Date: 06/21/2022
+  Description: Grooming page of Pets-R-Us site.  -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,28 +13,28 @@
     <title>Pets-R-Us</title>
   </head>
   <body>
-    <div class="topnav1">
-      <a href="#about" class="petTital">Pets-R-Us</a>
+    <section class="topnav1">
+      <a href="/" class="petTital">Pets-R-Us</a>
 
-      <a href="#news" class="split">Log In</a>
-      <a href="#contact" class="split">Sign Up</a>
-      <a class="active split" href="#home" class="">Home</a>
-    </div>
+      <a href="" class="split">Log In</a>
+      <a href="" class="split">Sign Up</a>
+      <a class="active split" href="/" class="">Home</a>
+    </section>
 
     <!-- ////////////////////// -->
-    <div class="bg-img">
+    <section class="bg-img">
       <div class="containerbar">
         <div class="topnav">
-          <button class="navbtn"><a href="./">Home</a></button>
+          <button class="navbtn"><a href="/">Home</a></button>
           <button class="navbtn"><a href="">Boarding</a></button>
-          <button class="navbtn"><a href="./grooming.html">Grooming</a></button>
+          <button class="navbtn"><a href="grooming.html">Grooming</a></button>
           <button class="navbtn"><a href="">Training</a></button>
         </div>
       </div>
-    </div>
+    </section>
 
     <!-- three cards  -->
-    <div>
+    <section>
       <h1 style="text-align: center">Grooming Service</h1>
       <p class="companyinfo">
         Lorem ipsum dolor sit amet quis dui ridiculus. Semper vulputate platea
@@ -47,18 +52,20 @@
       <p id="groomBtn">
         <button class="groomButton">Schedule a service</button>
       </p>
-    </div>
-      <hr />
+    </section>
+
+    <hr />
+    <section>
       <div>
         <div class="card weekly-dog">
           <div class="card-title">Pricing</div>
           <div class="card-content">
             <img src="./images/test-dog.jpg" class="testDog" alt="" />
             <div class="groomPI">
-              <p><strong>SPA Packages:</strong> $25-$65</p>
-              <p><strong>Nail Trim:</strong> $10</p>
-              <p><strong>Hair Cut:</strong> $25-$65</p>
-              <p><strong>Teeth Brushing:</strong> $10</p>
+              <p><strong>SPA Packages:</strong> $35-$85</p>
+              <p><strong>Nail Trim:</strong> $15</p>
+              <p><strong>Hair Cut:</strong> $35-105</p>
+              <p><strong>Teeth Brushing:</strong> $15</p>
               <p>
                 <strong>Customized grooming packages:</strong> Start from $100
               </p>
@@ -67,6 +74,7 @@
         </div>
       </div>
     </section>
+
     <hr />
     <section class="testimonials">
       <h1 style="text-align: center">Customer Testimonials</h1>
@@ -76,19 +84,25 @@
         auctor quisque aliquam ipsum leo hac turpis per. Sollicitudin ante amet
         venenatis ridiculus consectetur finibus aenean viverra semper elit.
       </p>
-      <p class="author">- John Wong</p>
+      <p class="author">- Jenny Wong</p>
       <p class="quote">
         Lorem ipsum dolor sit amet quis dui ridiculus. Semper vulputate platea
         auctor quisque aliquam ipsum leo hac turpis per. Sollicitudin ante amet
         venenatis ridiculus consectetur finibus aenean viverra semper elit.
       </p>
-      <p class="author">- John Wong</p>
+      <p class="author">- Bill Lee</p>
       <p class="quote">
         Lorem ipsum dolor sit amet quis dui ridiculus. Semper vulputate platea
         auctor quisque aliquam ipsum leo hac turpis per. Sollicitudin ante amet
         venenatis ridiculus consectetur finibus aenean viverra semper elit.
       </p>
-      <p class="author">- John Wong</p>
+      <p class="author">- Tom Chen</p>
     </section>
+
+    <footer>
+      <div class="footer">
+        <p>&copy; Copyright April Yang</p>
+      </div>
+    </footer>
   </body>
 </html>
