--- a/views/index.html
+++ b/views/index.html
@@ -1,3 +1,8 @@
+<!-- Title: Assignment 4.2 Pets-R-Us, Part 1
+  Author: April Yang
+  Date: 06/21/2022
+  Description: Landing page of Pets-R-Us site.  -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,16 +13,17 @@
     <title>Pets-R-Us</title>
   </head>
   <body>
-    <div class="topnav1">
-      <a href="./index.html" class="petTital">Pets-R-Us</a>
+    <!-- first nav bar -->
+    <section class="topnav1">
+      <a href="/" class="petTital">Pets-R-Us</a>
 
       <a href="#" class="split">Log In</a>
       <a href="#" class="split">Sign Up</a>
-      <a class="active split" href="./index.html" class="">Home</a>
-    </div>
+      <a class="active split" href="/" class="">Home</a>
+    </section>
 
-    <!-- ////////////////////// -->
-    <div class="bg-img">
+    <!-- second nav bar with image background -->
+    <section class="bg-img">
       <div class="containerbar">
         <div class="topnav">
           <button class="navbtn"><a href="/">Home</a></button>
@@ -26,11 +32,11 @@
           <button class="navbtn"><a href="">Training</a></button>
         </div>
       </div>
-    </div>
+    </section>
 
-    <!-- three cards  -->
-    <div>
-      <h1 style="text-align: center">Company info</h1>
+    <!-- Company info  -->
+    <section>
+      <h1 style="text-align: center">Company Information</h1>
       <p class="companyinfo">
         Lorem ipsum dolor sit amet quis dui ridiculus. Semper vulputate platea
         auctor quisque aliquam ipsum leo hac turpis per. Sollicitudin ante amet
@@ -44,68 +50,73 @@
         penatibus nunc sociosqu mi sollicitudin. Purus blandit est eu lobortis
         mauris lorem pulvinar. Vivamus integer dui ac curabitur himenaeos sem.
       </p>
-    </div>
+    </section>
 
-    <h1 style="text-align: center">Pet Services</h1>
-    <div class="row">
-      <div class="column">
-        <div class="card">
-          <h2 class="serviceTital">Boarding</h2>
-          <img
-            src="/images/background-img.jpg"
-            alt="Jane"
-            style="width: 100%"
-          />
-          <div class="container">
-            <p>Short describes service.</p>
-            <p>
-              Lorem ipsum dolor sit amet quis dui ridiculus. Semper vulputate
-              platea auctor quisque aliquam ipsum leo hac turpis per.
-            </p>
-            <p><button class="button">Schedule a service</button></p>
+    <!-- three cards with pet services info in one row -->
+    <section>
+      <h1 style="text-align: center">Pet Services</h1>
+      <div class="row">
+        <div class="column">
+          <div class="card">
+            <h2 class="serviceTital">Boarding</h2>
+            <img
+              src="/images/background-img.jpg"
+              alt="Jane"
+              style="width: 100%"
+            />
+            <div class="container">
+              <p>Short describes service.</p>
+              <p>
+                Lorem ipsum dolor sit amet quis dui ridiculus. Semper vulputate
+                platea auctor quisque aliquam ipsum leo hac turpis per.
+              </p>
+              <p><button class="button">Schedule a service</button></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="column">
+          <div class="card">
+            <h2 class="serviceTital">Grooming</h2>
+            <img
+              src="/images/background-img.jpg"
+              alt="Mike"
+              style="width: 100%"
+            />
+            <div class="container">
+              <p>Short describes service.</p>
+              <p>
+                Lorem ipsum dolor sit amet quis dui ridiculus. Semper vulputate
+                platea auctor quisque aliquam ipsum leo hac turpis per.
+              </p>
+              <p><button class="button">Schedule a service</button></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="column">
+          <div class="card">
+            <h2 class="serviceTital">Training</h2>
+            <img
+              src="/images/background-img.jpg"
+              alt="John"
+              style="width: 100%"
+            />
+            <div class="container">
+              <p>Short describes service.</p>
+              <p>
+                Lorem ipsum dolor sit amet quis dui ridiculus. Semper vulputate
+                platea auctor quisque aliquam ipsum leo hac turpis per.
+              </p>
+              <p><button class="button">Schedule a service</button></p>
+            </div>
           </div>
         </div>
       </div>
+    </section>
 
-      <div class="column">
-        <div class="card">
-          <h2 class="serviceTital">Grooming</h2>
-          <img
-            src="/images/background-img.jpg"
-            alt="Mike"
-            style="width: 100%"
-          />
-          <div class="container">
-            <p>Short describes service.</p>
-            <p>
-              Lorem ipsum dolor sit amet quis dui ridiculus. Semper vulputate
-              platea auctor quisque aliquam ipsum leo hac turpis per.
-            </p>
-            <p><button class="button">Schedule a service</button></p>
-          </div>
-        </div>
-      </div>
-
-      <div class="column">
-        <div class="card">
-          <h2 class="serviceTital">Training</h2>
-          <img
-            src="/images/background-img.jpg"
-            alt="John"
-            style="width: 100%"
-          />
-          <div class="container">
-            <p>Short describes service.</p>
-            <p>
-              Lorem ipsum dolor sit amet quis dui ridiculus. Semper vulputate
-              platea auctor quisque aliquam ipsum leo hac turpis per.
-            </p>
-            <p><button class="button">Schedule a service</button></p>
-          </div>
-        </div>
-      </div>
-    </div>
     <hr />
+    <!-- location info -->
     <section class="location">
       <ul class="grid">
         <li>
@@ -128,13 +139,14 @@
         </li>
 
         <li class="left-align">
-          <p class="locationtbellevue">LOCATION: Bellevue</p>
+          <p class="locationtbellevue">LOCATION: Renton</p>
 
-          <p class="address">1000 Galvin Road S; Bellevue, NE 68005</p>
+          <p class="address">17000 Greenriver Road S; Renton, WA 97032</p>
 
           <p class="contact">Contact Us</p>
+          <p class="contact">Phone: 888-888-8888</p>
           <p class="contactp">
-            Lorem ipsum dolor sit amet purus sagittis id justo.
+            Register your email to receive a 15% off when you first visit.
           </p>
 
           <form action="" class="">
@@ -146,25 +158,30 @@
       </ul>
       <hr />
 
+      <!-- Dog of the Week info -->
       <div>
         <div class="card weekly-dog">
-          <div class="card-title">Dog of the Week</div>
           <div class="card-content">
             <img src="/images/test-dog.jpg" class="testDog" alt="" />
+            <div class="dogInfo font">Dog of the Week</div>
             <div class="dogInfo">
-              <p><strong>Name:</strong> Chente</p>
-              <p><strong>Age:</strong> 8 weeks</p>
-              <p><strong>Favorite activity:</strong> Chasing the family cat</p>
-              <p><strong>Friends:</strong> Ony and Lexi</p>
+              <p><strong>Name:</strong> Cherry</p>
+              <p><strong>Age:</strong> One year old</p>
+              <p><strong>Favorite activity:</strong> Swimming in the pool</p>
+              <p><strong>Friends:</strong> Tom and Jerry</p>
               <p>
-                <strong>Most lovable quality:</strong> Loves to chew on toys.
+                <strong>Most lovable quality:</strong> It has never eaten food
+                from strangers.
               </p>
             </div>
           </div>
         </div>
       </div>
     </section>
+
     <hr />
+
+    <!-- Customer testimonials -->
     <section class="testimonials">
       <h1 style="text-align: center">Customer Testimonials</h1>
 
@@ -173,19 +190,25 @@
         auctor quisque aliquam ipsum leo hac turpis per. Sollicitudin ante amet
         venenatis ridiculus consectetur finibus aenean viverra semper elit.
       </p>
-      <p class="author">- John Wong</p>
+      <p class="author">- Joy Ouyang</p>
       <p class="quote">
         Lorem ipsum dolor sit amet quis dui ridiculus. Semper vulputate platea
         auctor quisque aliquam ipsum leo hac turpis per. Sollicitudin ante amet
         venenatis ridiculus consectetur finibus aenean viverra semper elit.
       </p>
-      <p class="author">- John Wong</p>
+      <p class="author">- Andraw Honsily</p>
       <p class="quote">
         Lorem ipsum dolor sit amet quis dui ridiculus. Semper vulputate platea
         auctor quisque aliquam ipsum leo hac turpis per. Sollicitudin ante amet
         venenatis ridiculus consectetur finibus aenean viverra semper elit.
       </p>
-      <p class="author">- John Wong</p>
+      <p class="author">- Yufi Qing</p>
     </section>
+
+    <footer>
+      <div class="footer">
+        <p>&copy; Copyright April Yang</p>
+      </div>
+    </footer>
   </body>
 </html>
