--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,26 +14,7 @@
   </head>
   <body>
     <!-- first nav bar -->
-    <section class="topnav1">
-      <a href="/" class="petTital">Pets-R-Us</a>
-
-      <a href="#" class="split">Log In</a>
-      <a href="#" class="split">Sign Up</a>
-      <a class="active split" href="/" class="">Home</a>
-    </section>
-
-    <!-- second nav bar with image background -->
-    <section class="bg-img">
-      <div class="containerbar">
-        <div class="topnav">
-          <button class="navbtn"><a href="/">Home</a></button>
-          <button class="navbtn"><a href="">Boarding</a></button>
-          <button class="navbtn"><a href="grooming">Grooming</a></button>
-          <button class="navbtn"><a href="">Training</a></button>
-        </div>
-      </div>
-    </section>
-
+    <header><%- include('./partials/header'); %></header>
     <!-- Company info  -->
     <section>
       <h1 style="text-align: center">Company Information</h1>
@@ -205,10 +186,6 @@
       <p class="author">- Yufi Qing</p>
     </section>
 
-    <footer>
-      <div class="footer">
-        <p>&copy; Copyright April Yang</p>
-      </div>
-    </footer>
+    <footer class="footer"><%- include('./partials/footer'); %></footer>
   </body>
 </html>
