edited training page

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,9 +11,9 @@
   <div class="containerbar">
     <div class="topnav">
       <button class="navbtn"><a href="/">Home</a></button>
-      <button class="navbtn"><a href="">Boarding</a></button>
+      <button class="navbtn"><a href="boarding">Boarding</a></button>
       <button class="navbtn"><a href="grooming">Grooming</a></button>
-      <button class="navbtn"><a href="">Training</a></button>
+      <button class="navbtn"><a href="training">Training</a></button>
     </div>
   </div>
 </section>
