added boarding page

--- a/views/grooming.ejs
+++ b/views/grooming.ejs
@@ -15,7 +15,6 @@
   <body>
     <header><%- include('./partials/header'); %></header>
 
-    <!-- three cards  -->
     <section>
       <h1 style="text-align: center">Grooming Service</h1>
       <p class="companyinfo">
@@ -37,6 +36,7 @@
     </section>
 
     <hr />
+    <!-- pricing card -->
     <section>
       <div>
         <div class="card weekly-dog">
@@ -58,6 +58,7 @@
     </section>
 
     <hr />
+    <!-- Customer Testimonials -->
     <section class="testimonials">
       <h1 style="text-align: center">Customer Testimonials</h1>
 
