--- a/views/index.ejs
+++ b/views/index.ejs
@@ -99,7 +99,7 @@
     <hr />
     <!-- location info -->
     <section class="location">
-      <ul class="grid">
+      <ul class="grid locationGrid">
         <li>
           <div id="card-container">
             <div id="card">
