--- a/views/training.ejs
+++ b/views/training.ejs
@@ -1,3 +1,9 @@
+<!-- Title: grooming.html
+  Author: April Yang
+  Date: 06/28/2022
+  Description: Training page of Pets-R-Us site.  -->
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -27,18 +33,18 @@
     </section>
     <hr />
 
+    <!-- pricing card -->
  <section>
       <div>
         <div class="card weekly-dog">
           <div class="card-titleTrain">Pricing</div>
-          <!-- <hr class="linetrain"> -->
           <div class="card-content">
-        <div class="column1">
+        <div>
             <img src="./images/test-dog.jpg" class="trainDog" alt="" />
 </div>
-     <div class="column1">
+     <div>
             <!-- three cards -->
-           <div class="grid" style="column-gap: 5px;">
+           <div class="grid gridTrain"  style="column-gap: 5px;">
         <div class="card">
             <div class="card-title">Tier 1</div>
             <div class="card-content">
@@ -93,8 +99,7 @@
     </div>
 </section>
 
-
-
+<!-- trainers three cards -->
     <section class="trainers">
       <h1 style="text-align: center">Meet Our Trainers</h1>
       <div class="row">
@@ -139,13 +144,11 @@
         <div class="column">
           <div class="card">
             <h2 class="serviceTital">Jessica Yang</h2>
-            <!-- <div class="trainerimg"> -->
             <img class="trainerimg"
               src="/images/trainer3-and-dog.jpeg"
               alt="John"
               style="width: 100%"
             />
-            <!-- </div> -->
             <div class="container">
               <p>Short trainer bio.</p>
               <p>
