--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -288,6 +288,7 @@ hr {
     text-align: center;
 }
 
+
 .left-align{
   padding-left: 30px;
     text-align: left;
@@ -394,9 +395,16 @@ margin-left: 400px;
 }
 
 .grid {
-        width: 55%;
+        /* width: 55%; */
     display: flex;
     flex-wrap: wrap;
+}
+
+.gridTrain{
+    width: 55%;
+    display: flex;
+    flex-wrap: wrap;
+
 }
 
 .card-titleTrain{
@@ -410,10 +418,6 @@ margin-left: 400px;
 
 }
 
-/* .cardTrain {
-  padding:0px 10px 10px 10px;
-  
-} */
 
 .p-10{
   padding:5px;
@@ -432,3 +436,25 @@ margin-left: 400px;
 
   height:300px;
 }
+
+.cardBoard{
+      width: 50%;
+    float: right;
+    margin-top: 50px;
+    /* margin-bottom: 200px; */
+}
+
+.boardSec{
+  margin-bottom: 450px;
+}
+
+#boardBtn{
+
+text-align: center;
+
+}
+
+.boardButton{
+  width: 80%;
+}
+
