--- a/views/log-in.ejs
+++ b/views/log-in.ejs
@@ -12,7 +12,7 @@
     <header><%- include('./partials/header'); %></header>
     <div>
       <h1>Log in</h1>
-      <form action="/sign-up">
+      <form action="/login">
         <input
           name="username"
           type="text"
