--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,8 @@
 <section class="topnav1">
   <a href="/" class="petTital">Pets-R-Us</a>
 
-  <a href="#" class="split">Log In</a>
-  <a href="#" class="split">Sign Up</a>
+  <a href="login" class="split">Log In</a>
+  <a href="register" class="split">Sign Up</a>
   <a class="active split" href="/" class="">Home</a>
 </section>
 
