--- a/views/register.ejs
+++ b/views/register.ejs
@@ -58,7 +58,7 @@
       </div>
     </section>
 
-    <section class="container">
+    <section class="container" style="margin-bottom: 300px">
       <div class="card center-div">
         <div class="card-title">User List</div>
 
