--- a/views/grooming.ejs
+++ b/views/grooming.ejs
@@ -13,6 +13,7 @@
     <title>Pets-R-Us</title>
   </head>
   <body>
+    <navbar><%- include('./partials/navbar'); %></navbar>
     <header><%- include('./partials/header'); %></header>
 
     <section>
