--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,10 @@
   </head>
   <body>
     <!-- first nav bar -->
+
+    <navbar><%- include('./partials/navbar'); %></navbar>
     <header><%- include('./partials/header'); %></header>
+
     <!-- Company info  -->
     <section>
       <h1 style="text-align: center">Company Information</h1>
