--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,18 @@
 <section class="topnav1">
   <a href="/" class="petTital">Pets-R-Us</a>
 
-  <a href="login" class="split">Log In</a>
-  <a href="register" class="split">Sign Up</a>
+  <!-- <div class="dropdown" style="float: right">
+    <button class="dropbtn">My Account</button>
+    <div class="dropdown-content">
+      <ul> 
+      <li><a href="register">Sign Up</a></li>
+      <li></li><a href="login">Log In</a></li>
+      <li></li><a href="#">Link 3</a></li>
+      <li></li><a href="#">Link 3</a></li>
+      </ul>
+    </div>
+  </div> -->
+
   <a class="active split" href="/" class="">Home</a>
 </section>
 
