--- a/views/training.ejs
+++ b/views/training.ejs
@@ -14,6 +14,7 @@
     <title>Pets-R-Us</title>
   </head>
   <body>
+    <navbar><%- include('./partials/navbar'); %></navbar>
     <header><%- include('./partials/header'); %></header>
     <section>
       <h1 style="text-align: center">Training Service</h1>
