--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,30 +9,53 @@
   </head>
   <body>
     <!-- first nav bar -->
+    <navbar><%- include('./partials/navbar'); %></navbar>
     <header><%- include('./partials/header'); %></header>
-    <div>
-      <h1>Log in</h1>
-      <form action="/login">
-        <input
-          name="username"
-          type="text"
-          class="form-control"
-          placeholder="Username"
-          required
-          autofocus
-        />
-        <input
-          name="password"
-          type="password"
-          class="form-control"
-          placeholder="password"
-          required
-        />
-      </form>
-    </div>
-    <div>
-      <button>Log in</button>
-    </div>
+
+    <section class="container signUpContainer">
+      <div class="card">
+        <h1 class="card-title">Log In</h1>
+
+        <div class="card-content signUpContent">
+          <!-- <div class="cardText"> -->
+          <div class="form">
+            <form action="/register" method="post">
+              <div class="form-field">
+                <label for="username" class="labelSignUp">Username</label><br />
+                <input
+                  type="text"
+                  class="inputSignUp"
+                  name="username"
+                  id="username"
+                  required
+                  autofocus
+                />
+              </div>
+              <div class="form-field">
+                <label for="password" class="labelSignUp">Password</label><br />
+                <input
+                  type="password"
+                  class="inputSignUp"
+                  name="password"
+                  id="password"
+                  required
+                />
+              </div>
+
+              <div class="form-field">
+                <input
+                  type="submit"
+                  value="Log In"
+                  class="btn btn-primary full-width btnR"
+                  style="margin-bottom: 100px"
+                />
+              </div>
+            </form>
+          </div>
+          <!-- </div> -->
+        </div>
+      </div>
+    </section>
 
     <footer class="footer"><%- include('./partials/footer'); %></footer>
   </body>
