--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,70 +9,82 @@
   </head>
   <body>
     <!-- first nav bar -->
+    <navbar><%- include('./partials/navbar'); %></navbar>
     <header><%- include('./partials/header'); %></header>
-    <section class="card-content">
-      <div class="form">
-        <form action="/register" method="post">
-          <div class="form-field">
-            <label for="username">Username</label><br />
-            <input
-              type="text"
-              class="input"
-              name="username"
-              id="username"
-              required
-              autofocus
-            />
-          </div>
-          <div class="form-field">
-            <label for="email">Email</label><br />
-            <input
-              type="text"
-              class="input"
-              name="email"
-              id="email"
-              required
-              autofocus
-            />
-          </div>
-          <div class="form-field">
-            <label for="password">Password</label><br />
-            <input
-              type="password"
-              class="input"
-              name="password"
-              id="password"
-              required
-            />
-          </div>
 
-          <div class="form-field">
-            <input
-              type="submit"
-              value="Register"
-              class="btn btn-primary full-width"
-              style="margin-bottom: 100px"
-            />
+    <section class="container signUpContainer">
+      <div class="card">
+        <h1 class="card-title">Sign Up</h1>
+
+        <div class="card-content signUpContent">
+          <!-- <div class="cardText"> -->
+          <div class="form">
+            <form action="/register" method="post">
+              <div class="form-field">
+                <label for="username" class="labelSignUp">Username</label><br />
+                <input
+                  type="text"
+                  class="inputSignUp"
+                  name="username"
+                  id="username"
+                  required
+                  autofocus
+                />
+              </div>
+              <div class="form-field">
+                <label for="email" class="labelSignUp">Email</label><br />
+                <input
+                  type="text"
+                  class="inputSignUp"
+                  name="email"
+                  id="email"
+                  required
+                  autofocus
+                />
+              </div>
+              <div class="form-field">
+                <label for="password" class="labelSignUp">Password</label><br />
+                <input
+                  type="password"
+                  class="inputSignUp"
+                  name="password"
+                  id="password"
+                  required
+                />
+              </div>
+
+              <div class="form-field">
+                <input
+                  type="submit"
+                  value="Register"
+                  class="btn btn-primary full-width btnR"
+                  style="margin-bottom: 100px"
+                />
+              </div>
+            </form>
           </div>
-        </form>
+          <!-- </div> -->
+        </div>
       </div>
     </section>
 
-    <section class="container" style="margin-bottom: 300px">
+    <section class="container signUpContainer" style="margin-bottom: 300px">
       <div class="card center-div">
-        <div class="card-title">User List</div>
+        <h1 class="card-title">User List</h1>
 
-        <div class="card-content">
+        <div class="card-content signUpContent">
           <% if(users.length > 0) { %>
           <table class="table">
             <tr>
               <th>Username</th>
+              <th>Email</th>
               <th>Created at</th>
             </tr>
             <tbody>
               <% users.forEach(function(user) { %>
               <tr>
                 <td><%= user.username %></td>
+                <td><%= user.email %></td>
                 <td><%= moment(user.createdAt).format('MM-DD-YYYY') %></td>
               </tr>
               <% }) %>
@@ -87,8 +99,6 @@
       </div>
     </section>
 
-    <footer style="margin-top: 50px" class="footer">
-      <%- include('./partials/footer'); %>
-    </footer>
+    <footer class="footer"><%- include('./partials/footer'); %></footer>
   </body>
 </html>
