edited comments and renamed files type from ejs to html

--- a/views/boarding.html
+++ b/views/boarding.html
@@ -1,4 +1,4 @@
-<!-- Title: grooming.html
+<!-- Title: boarding.html
   Author: April Yang
   Date: 06/28/2022
   Description: Boarding page of Pets-R-Us site.  -->
@@ -13,6 +13,7 @@
     <title>Pets-R-Us</title>
   </head>
   <body>
+    <!-- import navbar and header -->
     <navbar><%- include('./partials/navbar'); %></navbar>
     <header><%- include('./partials/header'); %></header>
     <section>
