--- a/views/index.html
+++ b/views/index.html
@@ -13,8 +13,7 @@
     <title>Pets-R-Us</title>
   </head>
   <body>
-    <!-- first nav bar -->
-
+    <!-- import navbar and header -->
     <navbar><%- include('./partials/navbar'); %></navbar>
     <header><%- include('./partials/header'); %></header>
 
@@ -121,7 +120,7 @@
             </div>
           </div>
         </li>
-
+        <!-- location info and contact form -->
         <li class="left-align">
           <p class="locationtbellevue">LOCATION: Renton</p>
 
