--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,18 +1,13 @@
+<!-- 
+  Title: header.ejs
+  Author: April Yang
+  Date: 06/18/2022
+  Description: header template will be injecting in every web page. 
+ -->
+
+<!-- first nav bar with the home link -->
 <section class="topnav1">
   <a href="/" class="petTital">Pets-R-Us</a>
-
-  <!-- <div class="dropdown" style="float: right">
-    <button class="dropbtn">My Account</button>
-    <div class="dropdown-content">
-      <ul> 
-      <li><a href="register">Sign Up</a></li>
-      <li></li><a href="login">Log In</a></li>
-      <li></li><a href="#">Link 3</a></li>
-      <li></li><a href="#">Link 3</a></li>
-      </ul>
-    </div>
-  </div> -->
-
   <a class="active split" href="/" class="">Home</a>
 </section>
 
