--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,11 @@
-  
+  <!-- 
+  Title: navbar.ejs
+  Author: April Yang
+  Date: 06/18/2022
+  Description: navbar template will be injecting in web page needed. 
+ -->
+
+ <!-- Dropdown button with list items -->
   <nav>
   <div class="dropdown" style="float: right">
     <button class="dropbtn">My Account</button>
@@ -6,8 +13,6 @@
       <ul> 
       <li><a href="register">Sign Up</a></li>
       <li></li><a href="login">Log In</a></li>
-      <!-- <li></li><a href="#">Link 3</a></li>
-      <li></li><a href="#">Link 3</a></li> -->
       </ul>
     </div>
   </div>
