--- a/views/partials/navbarLogin.ejs
+++ b/views/partials/navbarLogin.ejs
@@ -1,4 +1,9 @@
-
+  <!-- 
+  Title: navbarLogin.ejs
+  Author: April Yang
+  Date: 06/18/2022
+  Description: navbarLogin template will be injecting in the page when user log in account. 
+ -->
 
 <nav>
   <div class="dropdown" style="float: right">
@@ -15,9 +20,7 @@
        
       </li>
     <li><a href="/login">Log In</a></a></li>
-      <!-- <li></li><a href="login">Log In</a></li> -->
-      <!-- <li></li><a href="#">Link 3</a></li>
-      <li></li><a href="#">Link 3</a></li> -->
+     
       </ul>
     </div>
   </div>
