--- a/views/grooming.html
+++ b/views/grooming.html
@@ -13,6 +13,7 @@
     <title>Pets-R-Us</title>
   </head>
   <body>
+    <!-- import navbar and header -->
     <navbar><%- include('./partials/navbar'); %></navbar>
     <header><%- include('./partials/header'); %></header>
 
