--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,1 +1,8 @@
+<!-- 
+  Title: footer.ejs
+  Author: April Yang
+  Date: 06/18/2022
+  Description: footer template will be injecting in every web page. 
+ -->
+
 <p>&copy; Copyright April Yang</p>
