--- a/views/training.html
+++ b/views/training.html
@@ -1,4 +1,4 @@
-<!-- Title: grooming.html
+<!-- Title: training.html
   Author: April Yang
   Date: 06/28/2022
   Description: Training page of Pets-R-Us site.  -->
@@ -14,6 +14,7 @@
     <title>Pets-R-Us</title>
   </head>
   <body>
+     <!-- import navbar and header -->
     <navbar><%- include('./partials/navbar'); %></navbar>
     <header><%- include('./partials/header'); %></header>
     <section>
@@ -162,7 +163,6 @@
         </div>
       </div>
     </section>
- 
 
     <footer class="footer"><%- include('./partials/footer'); %></footer>
   </body>
