--- a/views/partials/navbarLogin.ejs
+++ b/views/partials/navbarLogin.ejs
@@ -11,7 +11,7 @@
     <div class="dropdown-content">
       <ul> 
       <li><% if(currentUser) { %>
-            <a href="#">Hi <%= currentUser %></a>
+            <a href="/">Hi <%= currentUser %></a>
         <% } %>
       </li>
     <li><a href="/logout">Log Out</a></a></li>
