user is able to log in , but nav bar need to update with logout option

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,11 +20,11 @@
     <!-- login card with form -->
     <section class="container signUpContainer">
       <div class="card">
-        <h1 class="card-title">Log In</h1>
+        <h1 class="card-title"><%= cardTitle %></h1>
 
         <div class="card-content signUpContent">
           <div class="form">
-            <form action="/register" method="post">
+            <form action="/login" method="post">
               <div class="form-field">
                 <label for="username" class="labelSignUp">Username</label><br />
                 <input
