--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,8 +14,9 @@
   </head>
   <body>
     <!-- import navbar and header -->
-    <navbar><%- include('./partials/navbar'); %></navbar>
-    <header><%- include('./partials/header'); %></header>
+
+    <navbar><%- include("./partials/navbar"); %></navbar>
+    <header><%- include("./partials/header"); %></header>
 
     <!-- Company info  -->
     <section>
