--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,7 +14,7 @@
     <!-- sign up card with form -->
     <section class="container signUpContainer">
       <div class="card">
-        <h1 class="card-title">Sign Up</h1>
+        <h1 class="card-title"><%= cardTitle %></h1>
         <div class="card-content signUpContent">
           <div class="form">
             <form action="/register" method="post">
