working on log in and log on

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,19 +1,27 @@
-  <!-- 
+<!-- 
   Title: navbar.ejs
   Author: April Yang
   Date: 06/18/2022
   Description: navbar template will be injecting in web page needed. 
  -->
 
- <!-- Dropdown button with list items -->
-  <nav>
+<!-- Dropdown button with list items -->
+
+<nav>
   <div class="dropdown" style="float: right">
     <button class="dropbtn">My Account</button>
     <div class="dropdown-content">
-      <ul> 
-      <li><a href="register">Sign Up</a></li>
-      <li></li><a href="login">Log In</a></li>
+      <ul>
+        <% if(currentUser) { %>
+
+        <li>Hi <%= currentUser %>!</li>
+
+        <li><a href="/">Logout</a></li>
+        <% } %><% if(!currentUser) { %>
+        <li><a href="/register">Sign Up</a></li>
+        <li><a href="/login">Log In</a></li>
+        <% } %>
       </ul>
     </div>
   </div>
-  </nav>
+</nav>
