--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/style.css" />
-    <title>Pets-R-Us</title>
+    <title><%= title %></title>
   </head>
   <body>
     <!-- import navbar and header -->
