still working on schedule page

--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -22,7 +22,7 @@
         <h1 class="card-title"><%= cardTitle %></h1>
         <div class="card-content signUpContent">
           <div class="form">
-            <form action="/appointment" method="post">
+            <form action="/schedule" method="post">
               <div class="form-field">
                 <label for="firstName" class="labelSignUp">First name</label
                 ><br />
