schedule apppointments working

--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -62,7 +62,7 @@
               </div>
 
               <div class="form-field">
-                <label for="service" class="labelSignUp">Services</label><br />
+                <label for="services" class="labelSignUp">Services</label><br />
                 <select
                   name="services"
                   id="services"
