still working on profile page

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -18,7 +18,7 @@
         <br />
         <li>Hi <%= currentUser %>!</li>
         <li><a href="/schedule">Schedule</a></li>
-        <li><a href="/api/profile">My Profile</a></li>
+        <li><a href="/profile">My Profile</a></li>
         <li><a href="/logout">Log Out</a></li>
         <% } %> <% if(!currentUser) { %>
         <li><a href="/register">Sign Up</a></li>
