profile page with login user email and appointments issue

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -25,6 +25,7 @@
           <% if(currentUser) { %>
           <br />
           <li>User name:<%= currentUser %></li>
+          <li>User email:<%= currentUser.email %></li>
           <% } %>
         </ul>
 
@@ -40,7 +41,7 @@
           let tableString = `<br /><h4 style="font-size: 32px; text-align: center; padding-bottom: 10px;">My Appointments</h4><table id="appointments" class="table"><tr><th>First name</th><th>Last name</th><th>Email</th><th>Service</th></tr>`;
 
           for (let appointment of data) {
-            tableString += `<tr><td>${appointment.firstName}</td><td>${appointment.lastName}</td><td>${appointment.email}</td><td>${appointment.service}</td></tr>`;
+            tableString += `<tr><td>${appointment.firstName}</td><td>${appointment.lastName}</td><td>${appointment.email}</td><td>${appointment.services}</td></tr>`;
           }
 
           tableString += `</table>`;
