edited code in index.js

--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -124,8 +124,8 @@
           </table>
           <% } else { %>
           <h3>
-            Users have not been added to the MongoDB database. Try adding some!
-          </h3>
+          <!-- Users have not been added to the MongoDB database. Try adding some!-->
+          </h3> 
           <% } %>
         
         </div>
