still working on profile page

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -24,7 +24,8 @@
           <div class="form">
             <form action="/register" method="post">
               <div class="form-field">
-                <label for="username" class="labelSignUp">Username</label><br />
+                <label for="username" class="labelSignUp">User name</label
+                ><br />
                 <input
                   type="text"
                   class="inputSignUp"
