--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -23,6 +23,20 @@
         <div class="card-content signUpContent">
           <div class="form">
             <form action="/schedule" method="post">
+
+               <!-- <div class="form-field">
+                <label for="userName" class="labelSignUp">User Name</label
+                ><br />
+                <input
+                  type="text"
+                  class="inputSignUp"
+                  name="userName"
+                  id="userName"
+                  required
+                  autofocus
+                />
+              </div> -->
+
               <div class="form-field">
                 <label for="firstName" class="labelSignUp">First name</label
                 ><br />
